[project]
name = "vntickers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gahoccode", email = "dautuchungkhoan1200@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "vnquant",
    "vnstock>=3.2.6",
]

[project.scripts]
vntickers = "vntickers:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
vnquant = { git = "https://github.com/phamdinhkhanh/vnquant.git" }
